added the join form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template</title>
+   <title>StaboFarm - Multipurpose eCommerce HTML Template</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -114,8 +114,8 @@
                         </div>
                         <div class="offcanvas__contact-text">
                            <a target="_blank"
-                              href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              href="https://maps.app.goo.gl/YpReH9qUDXkDNbPo8">12/A,
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -123,7 +123,7 @@
                            <i class="far fa-phone"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+088889797697">+088889797697</a>
+                           <a href="tel:+255687445294">+255687445294</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -131,7 +131,7 @@
                            <i class="fal fa-envelope"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+012-345-6789"><span class="mailto:support@mail.com">support@mail.com</span></a>
+                           <a href="tel:+012-345-6789"><span class="mailto:daudd2263@gmail.com">daudd2263@gmail.com</span></a>
                         </div>
                      </li>
                   </ul>
@@ -296,7 +296,7 @@
                <div class="header-to-main d-none d-sm-flex">
                   <div class="link-text">
                      <span><img src="assets/imgs/icons/call.png" alt=""></span>
-                     <a href="tel:+380961381876">+380961381876</a>
+                     <a href="tel:+255687445294">+255687445294</a>
                   </div>
                   <div class="header-top-notice d-none d-lg-block">
                      <p>TAKE CARE OF YOUR Health <span class="text-white">25% OFF</span> USE CODE “ DOFIX03 ”</p>
@@ -2984,7 +2984,7 @@
                      <div class="support-content">
                         <h3>Exclusive offers for you</h3>
                         <p>Get weekly deals, valuable health information and more.</p>
-                        <a class="join-btn furniture-btn" href="#">sing up<span><i
+                        <a class="join-btn furniture-btn" href="auth.html">sing up<span><i
                                  class="fa-regular fa-angle-right"></i></span></a>
                      </div>
                   </div>
@@ -2994,7 +2994,7 @@
                      <div class="support-content">
                         <h3>Join Our Community</h3>
                         <p>Get weekly deals, valuable health information and more.</p>
-                        <a class="join-btn furniture-btn" href="#">Join FREE now<span><i
+                        <a class="join-btn furniture-btn" href="farm_info.html">Join FREE now<span><i
                                  class="fa-regular fa-angle-right"></i></span></a>
                      </div>
                   </div>
@@ -3140,7 +3140,7 @@
             <div class="footer-copyright-wrapper">
                <div class="footer-copyright-text">
                   <p class="mb-0">© All Copyright 2025 by <a target="_blank" class="furniture-clr-hover"
-                        href="#">Dative Technology</a></p>
+                        href="#">StaboFarm</a></p>
                </div>
                <div class="footer-payment d-flex align-items-center gap-2">
                   <div class="footer-payment-item mb-0">
