--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/furniture/favicon.png">
+
+   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
