made some changes

--- a/checkout-pharmacy.html
+++ b/checkout-pharmacy.html
@@ -4,14 +4,14 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/pharmacy-favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="pharmacy.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -116,8 +116,8 @@
                         </div>
                         <div class="offcanvas__contact-text">
                            <a target="_blank"
-                              href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              href="https://maps.app.goo.gl/uXvuyASedUx3fSx36">12/A,
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -125,7 +125,7 @@
                            <i class="far fa-phone"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+088889797697">+088889797697</a>
+                           <a href="tel:+255687445294">+255687445294</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -133,7 +133,7 @@
                            <i class="fal fa-envelope"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+012-345-6789"><span class="mailto:support@mail.com">support@mail.com</span></a>
+                           <a href="tel:+255687445294"><span class="mailto:daudd2263@gmail.com">daudd2263@gmail.com</span></a>
                         </div>
                      </li>
                   </ul>
@@ -298,7 +298,7 @@
                <div class="header-to-main d-none d-sm-flex">
                   <div class="link-text">
                      <span><img src="assets/imgs/icons/call.png" alt=""></span>
-                     <a href="tel:+380961381876">+380961381876</a>
+                     <a href="tel:+255687445294">+255687445294</a>
                   </div>
                   <div class="header-top-notice d-none d-lg-block">
                      <p>TAKE CARE OF YOUR Health <span class="text-color-2">25% OFF</span> USE CODE “ DOFIX03 ”</p>
@@ -339,7 +339,7 @@
                         <span class="header-setting-toggle" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a href="#">My Profile</a>
+                              <a href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a href="wishlist.html">Wishlist</a>
@@ -348,7 +348,7 @@
                               <a href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a href="#">Logout</a>
+                              <a href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -363,7 +363,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="pharmacy.html">
-                              <img src="assets/imgs/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper d-none d-lg-block">
@@ -853,7 +853,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo-white.svg" alt="image bnot found"></a>
+                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo.png" alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
                      </p>
@@ -924,7 +924,7 @@
          <div class="footer-copyright-area b-t">
             <div class="footer-copyright-wrapper">
                <div class="footer-copyright-text">
-                  <p class="mb-0">© All Copyright 2024 by <a target="_blank" href="#">Addina</a></p>
+                  <p class="mb-0">© All Copyright 2025 by <a target="_blank" href="#">StaboFarm</a></p>
                </div>
                <div class="footer-conditions">
                   <ul>
