--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
     <a href="#" class="nav-link">History Orders</a>
     <a href="farm_info.html" class="nav-link">My Address</a>
     <a href="farm_info.html" class="nav-link">Setting</a>
-    <a href="#" class="nav-link">Logout</a>
+    <a href="auth.html" class="nav-link">Logout</a>
   </div>
   <div class="main">
     <div class="status-cards">
