--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="index.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -116,8 +116,8 @@
                         </div>
                         <div class="offcanvas__contact-text">
                            <a target="_blank"
-                              href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              href="https://maps.app.goo.gl/uXvuyASedUx3fSx36">12/A,
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -125,7 +125,7 @@
                            <i class="far fa-phone"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+088889797697">+088889797697</a>
+                           <a href="tel:+255687445294">+255687445294</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -133,7 +133,7 @@
                            <i class="fal fa-envelope"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+012-345-6789"><span class="mailto:support@mail.com">support@mail.com</span></a>
+                           <a href="tel:+255687445294"><span class="mailto:daudd2263@gmail.com">daudd2263@gmail.com</span></a>
                         </div>
                      </li>
                   </ul>
@@ -162,7 +162,7 @@
                <div class="header-to-main d-none d-sm-flex">
                   <div class="link-text">
                      <span><img src="assets/imgs/icons/call.png" alt=""></span>
-                     <a href="tel:+380961381876">+380961381876</a>
+                     <a href="tel:+255687445294">+255687445294</a>
                   </div>
                   <div class="header-top-notice d-none d-lg-block">
                      <p>TAKE CARE OF YOUR Health <span class="text-white">25% OFF</span> USE CODE “ DOFIX03 ”</p>
@@ -203,7 +203,7 @@
                         <span class="header-setting-toggle text-white" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a class="furniture-clr-hover" href="#">My Profile</a>
+                              <a class="furniture-clr-hover" href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a class="furniture-clr-hover" href="wishlist.html">Wishlist</a>
@@ -212,7 +212,7 @@
                               <a class="furniture-clr-hover" href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a class="furniture-clr-hover" href="#">Logout</a>
+                              <a class="furniture-clr-hover" href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -227,7 +227,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="index.html">
-                              <img src="assets/imgs/furniture/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/furniture/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper furniture__menu d-none d-lg-block">
@@ -520,7 +520,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo-light.svg"
+                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo.png"
                               alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
@@ -572,7 +572,7 @@
                            </div>
                            <div class="footer-info-text">
                               <a class="furniture-clr-hover" target="_blank"
-                                 href="https://www.google.com/maps/place/Orville+St,+La+Presa,+CA+91977,+USA/@32.7092048,-117.0082772,17z/data=!3m1!4b1!4m5!3m4!1s0x80d9508a9aec8cd1:0x72d1ac1c9527b705!8m2!3d32.7092003!4d-117.0060885">711-2880
+                                 href="https://maps.app.goo.gl/uXvuyASedUx3fSx36">711-2880
                                  Nulla St.</a>
                            </div>
                         </div>
@@ -581,7 +581,7 @@
                               <span><i class="fa-solid fa-phone furniture-icon"></i></span>
                            </div>
                            <div class="footer-info-text">
-                              <a class="furniture-clr-hover" href="tel:012-345-6789">+964 742 44 763</a>
+                              <a class="furniture-clr-hover" href="tel:255687445294">+255 687445294</a>
                               <p>Mon - Sat: 9 AM - 5 PM</p>
                            </div>
                         </div>
@@ -595,8 +595,8 @@
          <div class="footer-copyright-area b-t">
             <div class="footer-copyright-wrapper">
                <div class="footer-copyright-text">
-                  <p class="mb-0">© All Copyright 2024 by <a target="_blank" class="furniture-clr-hover"
-                        href="#">Addina</a></p>
+                  <p class="mb-0">© All Copyright 2025 by <a target="_blank" class="furniture-clr-hover"
+                        href="#">StaboFarm</a></p>
                </div>
                <div class="footer-payment d-flex align-items-center gap-2">
                   <div class="footer-payment-item mb-0">
