--- a/pharmacy.html
+++ b/pharmacy.html
@@ -11,7 +11,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/pharmacy-favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="pharmacy.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -117,7 +117,7 @@
                         <div class="offcanvas__contact-text">
                            <a target="_blank"
                               href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -339,7 +339,7 @@
                         <span class="header-setting-toggle" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a href="#">My Profile</a>
+                              <a href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a href="wishlist.html">Wishlist</a>
@@ -348,7 +348,7 @@
                               <a href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a href="#">Logout</a>
+                              <a href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -363,7 +363,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="pharmacy.html">
-                              <img src="assets/imgs/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper d-none d-lg-block">
@@ -2114,7 +2114,7 @@
                      <div class="support-content">
                         <h3>Exclusive offers for you</h3>
                         <p>Get weekly deals, valuable health information and more.</p>
-                        <a class="join-btn" href="#">sing up<span><i class="fa-regular fa-angle-right"></i></span></a>
+                        <a class="join-btn" href="auth.html">sing up<span><i class="fa-regular fa-angle-right"></i></span></a>
                      </div>
                   </div>
                </div>
@@ -2123,7 +2123,7 @@
                      <div class="support-content">
                         <h3>Join Our Community</h3>
                         <p>Get weekly deals, valuable health information and more.</p>
-                        <a class="join-btn" href="#">Join FREE now<span><i
+                        <a class="join-btn" href="farm_info.html">Join FREE now<span><i
                                  class="fa-regular fa-angle-right"></i></span></a>
                      </div>
                   </div>
@@ -2199,7 +2199,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo-white.svg" alt="image bnot found"></a>
+                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo.png" alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
                      </p>
