--- a/grocery-details.html
+++ b/grocery-details.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="grocery.html">
-                        <img src="assets/imgs/grocery/logo/logo-light.svg" alt="logo not found">
+                        <img src="assets/imgs/grocery/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -116,8 +116,8 @@
                         </div>
                         <div class="offcanvas__contact-text">
                            <a class="grocery-clr-hover" target="_blank"
-                              href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              href="https://maps.app.goo.gl/uXvuyASedUx3fSx36">12/A,
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -125,7 +125,7 @@
                            <i class="far fa-phone"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a class="grocery-clr-hover" href="tel:+088889797697">+088889797697</a>
+                           <a class="grocery-clr-hover" href="tel:+255687445294">+255687445294</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -133,8 +133,8 @@
                            <i class="fal fa-envelope"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a class="grocery-clr-hover" href="tel:+012-345-6789"><span
-                                 class="mailto:support@mail.com">support@mail.com</span></a>
+                           <a class="grocery-clr-hover" href="tel:+255687445294"><span
+                                 class="mailto:daudd@gmail.com">daudd2263@gmail.com</span></a>
                         </div>
                      </li>
                   </ul>
@@ -172,7 +172,7 @@
                               stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                      </span>
-                     <a href="tel:+380961381876">+380961381876</a>
+                     <a href="tel:+255687445294">+255687445294</a>
                   </div>
                   <div class="header-top-notice d-none d-lg-block">
                      <p>TAKE CARE OF YOUR Health <span class="grocery-clr">25% OFF</span> USE CODE “ DOFIX03 ”</p>
@@ -213,7 +213,7 @@
                         <span class="header-setting-toggle grocery-clr-hover" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a class="grocery-clr-hover" href="#">My Profile</a>
+                              <a class="grocery-clr-hover" href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a class="grocery-clr-hover" href="wishlist.html">Wishlist</a>
@@ -222,7 +222,7 @@
                               <a class="grocery-clr-hover" href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a class="grocery-clr-hover" href="#">Logout</a>
+                              <a class="grocery-clr-hover" href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -237,7 +237,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="grocery.html">
-                              <img src="assets/imgs/grocery/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/grocery/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper grocery__menu d-none d-lg-block">
@@ -765,7 +765,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="grocery.html"><img src="assets/imgs/grocery/logo/logo-light.svg"
+                        <a href="grocery.html"><img src="assets/imgs/grocery/logo/logo.png"
                               alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
@@ -812,14 +812,14 @@
                         <h4>Contact</h4>
                      </div>
                      <div class="footer-info mb-35">
-                        <p class="w-75">4517 Washington Ave. Manchester, Kentucky 39495</p>
+                        <p class="w-75">4517 Mbeya Ave. Mashariki, Kentucky 39495</p>
                         <div class="footer-info-item d-flex align-items-start pb-15 pt-15">
                            <div class="footer-info-icon mr-20">
                               <span> <i class="fa-solid fa-location-dot grocery-icon"></i></span>
                            </div>
                            <div class="footer-info-text">
                               <a class="grocery-clr-hover" target="_blank"
-                                 href="https://www.google.com/maps/place/Orville+St,+La+Presa,+CA+91977,+USA/@32.7092048,-117.0082772,17z/data=!3m1!4b1!4m5!3m4!1s0x80d9508a9aec8cd1:0x72d1ac1c9527b705!8m2!3d32.7092003!4d-117.0060885">711-2880
+                                 href="https://maps.app.goo.gl/uXvuyASedUx3fSx36">711-2880
                                  Nulla St.</a>
                            </div>
                         </div>
@@ -828,7 +828,7 @@
                               <span><i class="fa-solid fa-phone grocery-icon"></i></span>
                            </div>
                            <div class="footer-info-text">
-                              <a class="grocery-clr-hover" href="tel:012-345-6789">+964 742 44 763</a>
+                              <a class="grocery-clr-hover" href="tel:255687445294">+255687445294</a>
                               <p>Mon - Sat: 9 AM - 5 PM</p>
                            </div>
                         </div>
@@ -842,8 +842,8 @@
          <div class="footer-copyright-area b-t">
             <div class="footer-copyright-wrapper">
                <div class="footer-copyright-text">
-                  <p class="mb-0">© All Copyright 2024 by <a target="_blank" class="grocery-clr-hover"
-                        href="#">Addina</a>
+                  <p class="mb-0">© All Copyright 2025 by <a target="_blank" class="grocery-clr-hover"
+                        href="#">StaboFarm</a>
                   </p>
                </div>
                <div class="footer-payment d-flex align-items-center gap-2">
