--- a/pharmacy-product.html
+++ b/pharmacy-product.html
@@ -4,12 +4,12 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template</title>
+   <title>StaboFarm - Multipurpose eCommerce HTML Template</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/pharmacy-favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -89,7 +89,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="pharmacy.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -114,8 +114,8 @@
                         </div>
                         <div class="offcanvas__contact-text">
                            <a target="_blank"
-                              href="https://www.google.com/maps/place/Dhaka/@23.7806207,90.3492859,12z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.8104753!4d90.4119873">12/A,
-                              Mirnada City Tower, NYC</a>
+                              href="assets/imgs/favicon.png">12/A,
+                              Mbeya City Tower, NYC</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -123,7 +123,7 @@
                            <i class="far fa-phone"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+088889797697">+088889797697</a>
+                           <a href="tel:+255687445294">+255687445294</a>
                         </div>
                      </li>
                      <li class="d-flex align-items-center">
@@ -131,7 +131,7 @@
                            <i class="fal fa-envelope"></i>
                         </div>
                         <div class="offcanvas__contact-text">
-                           <a href="tel:+012-345-6789"><span class="mailto:support@mail.com">support@mail.com</span></a>
+                           <a href="tel:+255687445294"><span class="mailto:daudd2263@gmail.com">daudd2263@gmail.com</span></a>
                         </div>
                      </li>
                   </ul>
@@ -337,7 +337,7 @@
                         <span class="header-setting-toggle" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a href="#">My Profile</a>
+                              <a href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a href="wishlist.html">Wishlist</a>
@@ -346,7 +346,7 @@
                               <a href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a href="#">Logout</a>
+                              <a href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -361,7 +361,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="pharmacy.html">
-                              <img src="assets/imgs/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper d-none d-lg-block">
@@ -1528,7 +1528,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo-white.svg" alt="image bnot found"></a>
+                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo.png" alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
                      </p>
