--- a/store.html
+++ b/store.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="index.html">
-                        <img src="assets/imgs/furniture/logo/logo-light.svg" alt="logo not found">
+                        <img src="assets/imgs/furniture/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -339,7 +339,7 @@
                         <span class="header-setting-toggle text-white" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a class="furniture-clr-hover" href="#">My Profile</a>
+                              <a class="furniture-clr-hover" href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a class="furniture-clr-hover" href="wishlist.html">Wishlist</a>
@@ -348,7 +348,7 @@
                               <a class="furniture-clr-hover" href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a class="furniture-clr-hover" href="#">Logout</a>
+                              <a class="furniture-clr-hover" href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -363,7 +363,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="index.html">
-                              <img src="assets/imgs/furniture/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/furniture/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper furniture__menu d-none d-lg-block">
@@ -583,7 +583,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo-light.svg"
+                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo.png"
                               alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
@@ -658,8 +658,8 @@
          <div class="footer-copyright-area b-t">
             <div class="footer-copyright-wrapper">
                <div class="footer-copyright-text">
-                  <p class="mb-0">© All Copyright 2024 by <a target="_blank" class="furniture-clr-hover"
-                        href="#">Addina</a></p>
+                  <p class="mb-0">© All Copyright 2025 by <a target="_blank" class="furniture-clr-hover"
+                        href="#">StaboFarm</a></p>
                </div>
                <div class="footer-payment d-flex align-items-center gap-2">
                   <div class="footer-payment-item mb-0">
