--- a/wishlist-grocery.html
+++ b/wishlist-grocery.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
@@ -93,7 +93,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="grocery.html">
-                        <img src="assets/imgs/grocery/logo/logo-light.svg" alt="logo not found">
+                        <img src="assets/imgs/grocery/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -351,7 +351,7 @@
                         <span class="header-setting-toggle grocery-clr-hover" id="header-setting-toggle">Setting</span>
                         <ul>
                            <li>
-                              <a class="grocery-clr-hover" href="#">My Profile</a>
+                              <a class="grocery-clr-hover" href="dashboard.html">My Profile</a>
                            </li>
                            <li>
                               <a class="grocery-clr-hover" href="wishlist.html">Wishlist</a>
@@ -360,7 +360,7 @@
                               <a class="grocery-clr-hover" href="cart.html">Cart</a>
                            </li>
                            <li>
-                              <a class="grocery-clr-hover" href="#">Logout</a>
+                              <a class="grocery-clr-hover" href="auth.html">Logout</a>
                            </li>
                         </ul>
                      </div>
@@ -375,7 +375,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="grocery.html">
-                              <img src="assets/imgs/grocery/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/grocery/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper grocery__menu d-none d-lg-block">
@@ -619,7 +619,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="grocery.html"><img src="assets/imgs/grocery/logo/logo-light.svg"
+                        <a href="grocery.html"><img src="assets/imgs/grocery/logo/logo.png"
                               alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
