--- a/wishlist-pharmacy.html
+++ b/wishlist-pharmacy.html
@@ -4,14 +4,14 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/pharmacy-favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -90,7 +90,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="pharmacy.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -362,7 +362,7 @@
                      <div class="header-left">
                         <div class="header-logo">
                            <a href="pharmacy.html">
-                              <img src="assets/imgs/logo/logo.svg" alt="logo not found">
+                              <img src="assets/imgs/logo/logo.png" alt="logo not found">
                            </a>
                         </div>
                         <div class="mean__menu-wrapper d-none d-lg-block">
@@ -606,7 +606,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo-white.svg" alt="image bnot found"></a>
+                        <a href="pharmacy.html"><img src="assets/imgs/logo/logo.png" alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
                      </p>
