--- a/wishlist.html
+++ b/wishlist.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Addina - Multipurpose eCommerce HTML Template
+   <title>StaboFarm - Multipurpose eCommerce HTML Template
 
    </title>
    <meta name="description" content="">
@@ -91,7 +91,7 @@
                <div class="offcanvas__top mb-40 d-flex justify-content-between align-items-center">
                   <div class="offcanvas__logo">
                      <a href="index.html">
-                        <img src="assets/imgs/logo/logo-white.svg" alt="logo not found">
+                        <img src="assets/imgs/logo/logo.png" alt="logo not found">
                      </a>
                   </div>
                   <div class="offcanvas__close">
@@ -471,7 +471,7 @@
                <div class="footer-grid-3">
                   <div class="footer-widget-4">
                      <div class="footer-logo mb-35">
-                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo-light.svg"
+                        <a href="index.html"><img src="assets/imgs/furniture/logo/logo.png"
                               alt="image bnot found"></a>
                      </div>
                      <p>It helps designers plan out where the content will sit, the content to be written and approved.
